codex-rs/tui_app_server/src/snapshots/codex_tui_app_server__pager_overlay__tests__static_overlay_snapshot_basic.snap
---
source: tui_app_server/src/pager_overlay.rs
expression: term.backend()
---
"/ S T A T I C / / / / / / / / / / / / / "
"one                                     "
"two                                     "
"three                                   "
"~                                       "
"~                                       "
"───────────────────────────────── 100% ─"
" ↑/↓ to scroll   pgup/pgdn to page   hom"
" q to quit                              "
"                                        "
