codex-rs/tui_app_server/src/snapshots/codex_tui_app_server__pager_overlay__tests__static_overlay_wraps_long_lines.snap
---
source: tui_app_server/src/pager_overlay.rs
expression: term.backend()
---
"/ S T A T I C / / / / / "
"a very long line that   "
"should wrap when        "
"rendered within a narrow"
"─────────────────── 0% ─"
" ↑/↓ to scroll   pgup/pg"
" q to quit              "
"                        "
