codex-rs/tui_app_server/src/snapshots/codex_tui_app_server__pager_overlay__tests__transcript_overlay_renders_live_tail.snap
---
source: tui_app_server/src/pager_overlay.rs
expression: term.backend()
---
"/ T R A N S C R I P T / / / / / / / / / "
"alpha                                   "
"                                        "
"tail                                    "
"~                                       "
"~                                       "
"───────────────────────────────── 100% ─"
" ↑/↓ to scroll   pgup/pgdn to page   hom"
" q to quit   esc to edit prev           "
"                                        "
